# django_train

./: .gitignore  .pre-commit-config.yaml  Makefile  Procfile  manage.py  pyproject.toml  requirements.txt
cities/: __init__.py  apps.py  forms.py  models.py  urls.py  views.py
cities/migrations/: 0001_initial.py  0002_auto_20200521_0538.py  0003_auto_20200527_1938.py  0003_auto_20200531_1657.py  0004_merge_20200531_1919.py
cities/templates/cities/: create.html  detail.html  home.html  update.html
routes/: admin.py  forms.py  models.py  tests.py  views.py
routes/migrations/: 0001_initial.py
routes/templates/routes/: home.html
src/cities/: forms.py  models.py  urls.py  views.py
src/cities/migrations/: 0001_initial.py
src/cities/templates/cities/: home.html  update.html
src/templates/: base.html  hello.html
src/travel/: settings.py  urls.py  views.py
src/travel/settings/: __init__.py  local.py  prodaction.py  production.py
trains/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
trains/migrations/: 0001_initial.py
trains/templates/trains/: create.html  delete.html  detail.html  home.html  update.html
travel/: asgi.py  urls.py  views.py  wsgi.py
travel/settings/: __init__.py  production.py
travel/templates/: base.html  hello.html
