[tool.poetry]
name = "django_train"
version = "0.1.0"
description = ""
authors = ["berpress <berpress@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
django = "^3.0.6"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
