[tool.poetry]
name = "django_train"
version = "0.1.0"
description = ""
authors = ["berpress <berpress@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6.4"
django = "^3.0.7"
gunicorn = "^20.0.4"
whitenoise = "^5.1.0"
dj-database-url = "^0.5.0"
psycopg2 = "^2.8.5"
pre-commit = "^2.5.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.1"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
